<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caoyi.pinme.LoginActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/login_toolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="Sign in to Your Account"
        android:textColor="@android:color/black"
        android:textSize="30sp" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</RelativeLayout>
