<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_settings_button"
        android:title="Account Settings" />
    <item
        android:id="@+id/main_allusers_button"
        android:title="All Users" />
    <item
        android:id="@+id/main_logout_button"
        android:title="@string/logout" />
</menu>