<resources>
    <string name="app_name">PinMe</string>
    <string name="register">Register</string>
    <string name="create_account">create account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_status">Your Status</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="title_activity_maps">Map</string>
</resources>
